# gen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NEXT_SESSION_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHARTER.md  DECISION_LOG.md  FOUR_GATE_TEMPLATE.md  gauntlet_baselines.md  gauntlet_state_expansion.md  gauntlet_tropical.md
docs/screens/: state_expansion.md  tropical_max_plus.md
scripts/: paper_screen.py  run_gauntlet.py  verify_deps.py
tests/: test_gauntlet.py  test_interface.py  test_ledger.py  test_state_expansion.py  test_tropical.py  test_wilcoxon.py
